--- a/_posts/2023-05-01-Vue.js-reactive-properties.md
+++ b/_posts/2023-05-01-Vue.js-reactive-properties.md
@@ -75,3 +75,8 @@ Finally, we use the mounted lifecycle hook to set the focus on the input element
 In this example, whenever the count property changes, the watcher will log a message to the console. Whenever the text property changes, the textLength computed property will be updated, and the template will display the length of the text string. The double computed property will also be updated whenever the count property changes, and the template will display the doubled value of count. When the component is mounted, the mounted lifecycle hook will set the focus on the input element using a ref.
 
 This example demonstrates how data properties, computed properties, watchers, and refs can be used together in a Vue component to create dynamic and reactive user interfaces.
+
+___
+References : 
+1. [Vue.js](https://vuejs.org/guide/introduction.html)
+2. [Vueschool](https://vueschool.io/)
